# wikipedia-example

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  crawler.py  explorer.py  extract.py  inserter.py  requirements.txt  server.py
inserter/: Cargo.toml
inserter/src/: main.rs
src/: analyzer.rs  crawler.rs  explorer.rs  indexer.rs  main.rs  parser.rs  proc.rs  util.rs
src/common/: lib.rs
src/crawler/: main.rs
src/explorer/: main.rs
templates/: article.html  article.tera  index.tera  main.html
wikipedia/: __init__.py  client.py  proc.py  util.py
