[package]
name = "indradb-wikipedia"
version = "0.2.0"
authors = ["Yusuf Simonson <simonson@gmail.com>"]
edition = "2018"

[[bin]]
name = "indradb-wikipedia"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "^1.0.57"
uuid = { version = "^1.2.2", features = ["v1", "serde"] }
pbr = "1"
tonic = "0.5.2"
indradb-lib = { path = "indradb/lib" }
indradb-proto = { path = "indradb/proto" }
libc = "0.2.107"
clap = "2"
bzip2 = "0.4.3"
quick-xml = "0.22.0"
regex = "1"
serde = { version = "^1.0.57", features = ["derive"] }
tokio = { version = "1.13.1", features = ["rt-multi-thread"] }
warp = "0.3.2"
async-channel = "1.6.1"
tera = "1"
