[package]
name = "indradb-wikipedia-inserter"
version = "0.1.0"
authors = ["Yusuf Simonson <simonson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "^1.0.57"
uuid = "0.8.1"
capnp = "0.13.3"
capnp-rpc = "0.13.1"
futures = "0.3.5"
async-std = { version = "1.6.4", features = ["unstable"] }
blake2b_simd = "0.5.11"
pbr = "^1.0.3"
indradb-lib = "1.2.0"
indradb-proto = "1.2.0"
