[package]
name = "indradb-wikipedia-inserter"
version = "0.1.0"
authors = ["Yusuf Simonson <simonson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "^1.0.57"
uuid = { version = "0.8.1", features = ["serde"] }
capnp = "0.13.3"
capnp-rpc = "0.13.1"
futures = "0.3.5"
blake2b_simd = "0.5.11"
pbr = "^1.0.3"
indradb-lib = { path = "../../indradb/lib" }
indradb-proto = { path = "../../indradb/proto" }
clap = "2"
bzip2 = "0.4.1"
quick-xml = "0.20.0"
regex = "1"
serde = { version = "1", features = ["derive"] }
bincode = "1.3.1"
lazy_static = "1"
tokio = { version = "0.2.23", features = ["net", "macros", "time", "rt-util"]}
tokio-util = { version = "0.3.0", features = ["compat"] }
