[package]
name = "indradb-wikipedia-inserter"
version = "0.1.0"
authors = ["Yusuf Simonson <simonson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "^1.0.57"
uuid = { version = "0.8.1", features = ["serde"] }
blake2b_simd = "0.5.11"
pbr = "^1.0.3"
tonic = "0.3.1"
# TODO: remove path
indradb-lib = { version = "1.2.0", path = "../../indradb/lib" }
indradb-proto = { version = "1.2.0", path = "../../indradb/proto" }
clap = "2"
bzip2 = "0.4.1"
quick-xml = "0.20.0"
regex = "1"
serde = { version = "1", features = ["derive"] }
bincode = "1.3.1"
lazy_static = "1"
tokio = { version = "0.2.23", features = ["net", "macros", "time", "rt-util"]}
failure = "0.1.8"
